log

Thu 14 Mar 2024 02:24:47 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
dfbd033
Thu 14 Mar 2024 02:24:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
e7ca7ea
Thu 14 Mar 2024 02:34:21 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:35:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   35 |   return temp;
      |          ^~~~
exercises.c:28:6: note: declared here
   28 | void reverseArray(int arr[], int size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ffda5c5
Thu 14 Mar 2024 02:34:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
59661d4
Thu 14 Mar 2024 02:51:53 PM UTC: 
 exercises.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
ade4097
Fri 15 Mar 2024 08:39:48 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
dc5a29a
